# axiom

./: .gitignore  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  project.bootstrap.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  (+4 more)
axiom/: __init__.py  __main__.py  api.py  ast.py  bytecode.py  checker.py  cli.py  compiler.py  errors.py  host.py  interpreter.py  intops.py  lexer.py  loader.py  packaging.py  parser.py  repl.py  semantic_plan.py  suggestions.py  token.py  values.py  vm.py
docs/: axiom-compiler-source-layout.md  book.md  bytecode.md  compiler-hir-ownership-capability.md  compiler-package-graph.md  compiler-source-decomposition-plan.md  direct-native-runtime-abi-v0.md  grammar.md  intent-ir-v0.md  kernel.md  package.md  performance-benchmarks.md  python-exit-conformance.md  python-exit-parity-gate.md  python-exit-parity.md  python-exit-plan.md  python-exit-vm-disposition.md  quality.md  roadmap-agent-native-ledger.md  roadmap-status.md  roadmap.md  rust-bootstrap-boundary.md  rust-exit-full-lib-triage.json  rust-exit-readiness.json  rust-exit-readiness.md  sql-migration-target-v0.md  stage1-agent-grade-compiler.md  stage1-debug-map.md  stage1-language-issue-disposition.md  stage1-lsp.md  stage1-stdlib-status.md  stage1.md  style.md  supply-chain.md
examples/: arith.ax  compile_demo.ax
scripts/: check-detect-secrets.sh
stage1/: Cargo.toml
tests/: helpers.py  test_bytecode.py  test_ci_preflight.py  test_cli.py  test_cli_packages.py  test_cli_runtime.py  test_conformance.py  test_detect_secrets_script.py  test_errors.py  test_errors_core.py  test_errors_imports.py  test_errors_runtime.py  test_intops.py  test_loader.py  test_quality_crap.py  test_semantic_plan.py
(+401 files in other folders)
