[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "axiom-lang"
version = "0.1.0"
description = "Axiom language bootstrap: interpreter + bytecode compiler/VM (no LLVM)"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "JT"}]

[project.optional-dependencies]
dev = [
    # Keep dev tooling pinned; Dependabot opens update PRs via .github/dependabot.yml.
    "ruff==0.15.11",
]

[project.scripts]
axiom = "axiom.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["axiom*","tests*"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
